--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-django",
-  "version": "0.1.0",
+  "name": "merit-academy",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "antd": "^3.11.2",
@@ -9,7 +9,7 @@
     "react-dom": "^16.7.0",
     "react-iframe": "^1.3.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
