--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "dependencies": {
     "antd": "^3.11.2",
     "axios": "^0.18.0",
+    "babel-plugin-import": "^1.11.0",
+    "customize-cra": "^0.2.12",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "react": "^16.7.0",
+    "react-app-rewired": "^2.1.3",
     "react-dom": "^16.7.0",
     "react-iframe": "^1.3.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "postinstall": "npm run build"
   },
   "engines": {
