--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,31 @@
-Django==2.2
+astroid==2.1.0
+certifi==2018.8.24
+chardet==3.0.4
+colorama==0.4.1
+defusedxml==0.5.0
 dj-database-url==0.5.0
+Django==2.2.7
+django-allauth==0.37.1
 django-cors-headers==2.5.2
 django-heroku==0.3.1
+django-rest-auth==0.9.3
 djangorestframework==3.9.2
 gunicorn==19.9.0
+idna==2.7
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
+oauthlib==2.1.0
+pep8==1.7.1
+psycopg2==2.8.4
+pylint==2.2.2
+python3-openid==3.1.0
+pytz==2018.5
+requests==2.19.1
+requests-oauthlib==1.0.0
+six==1.11.0
+sqlparse==0.3.0
+urllib3==1.23
+virtualenv==16.1.0
 whitenoise==3.3.1
+wrapt==1.10.11
