--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+arrow==0.15.5
 astroid==2.1.0
+binaryornot==0.4.4
 certifi==2018.8.24
 chardet==3.0.4
+Click==7.0
 colorama==0.4.1
+cookiecutter==1.7.0
 defusedxml==0.5.0
 dj-database-url==0.5.0
 Django==2.2.9
@@ -10,15 +14,21 @@ django-cors-headers==2.5.2
 django-heroku==0.3.1
 django-rest-auth==0.9.3
 djangorestframework==3.9.2
+future==0.18.2
 gunicorn==19.9.0
 idna==2.7
 isort==4.3.4
+Jinja2==2.10.3
+jinja2-time==0.2.0
 lazy-object-proxy==1.3.1
+MarkupSafe==1.1.1
 mccabe==0.6.1
 oauthlib==2.1.0
 pep8==1.7.1
+poyo==0.5.0
 psycopg2==2.8.4
 pylint==2.2.2
+python-dateutil==2.8.1
 python3-openid==3.1.0
 pytz==2018.5
 requests==2.22.0
@@ -27,5 +37,6 @@ six==1.11.0
 sqlparse==0.3.0
 urllib3==1.24.2
 virtualenv==16.1.0
+whichcraft==0.6.1
 whitenoise==3.3.1
 wrapt==1.10.11
