--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,23 @@
-arrow==0.15.5
-astroid==2.1.0
-binaryornot==0.4.4
-certifi==2018.8.24
+asgiref==3.2.10
+beautifulsoup4==4.9.1
+bs4==0.0.1
+certifi==2020.6.20
 chardet==3.0.4
-Click==7.0
-colorama==0.4.1
-cookiecutter==1.7.0
-defusedxml==0.5.0
 dj-database-url==0.5.0
-Django==2.2.10
-django-allauth==0.37.1
-django-cors-headers==2.5.2
+Django==3.1.2
+django-cors-headers==3.5.0
 django-heroku==0.3.1
-django-rest-auth==0.9.3
-djangorestframework==3.9.2
-future==0.18.2
-gunicorn==19.9.0
-idna==2.7
-isort==4.3.4
-Jinja2==2.10.3
-jinja2-time==0.2.0
-lazy-object-proxy==1.3.1
-MarkupSafe==1.1.1
-mccabe==0.6.1
-oauthlib==2.1.0
-pep8==1.7.1
-poyo==0.5.0
-psycopg2==2.8.4
-pylint==2.2.2
-python-dateutil==2.8.1
-python3-openid==3.1.0
-pytz==2018.5
-requests==2.22.0
-requests-oauthlib==1.0.0
-six==1.11.0
-sqlparse==0.3.0
-urllib3==1.24.2
-virtualenv==16.1.0
-whichcraft==0.6.1
-whitenoise==3.3.1
-wrapt==1.10.11
+djangorestframework==3.12.1
+gunicorn==20.0.4
+idna==2.9
+lxml==4.5.1
+psycopg2==2.8.6
+python-dotenv==0.13.0
+pytube3==9.6.4
+pytz==2020.1
+requests==2.24.0
+soupsieve==2.0.1
+sqlparse==0.4.1
+typing-extensions==3.7.4.3
+urllib3==1.25.9
+whitenoise==5.2.0
